--- a/src/views/products/bodegas-info.ejs
+++ b/src/views/products/bodegas-info.ejs
@@ -12,9 +12,9 @@
     <%- include("../partials/header.ejs") %> 
     <main>
         <div class="contenedor-bodegas">
-            <h1>
-                Bodegas
-            </h1>
+            <div class="contenedor-titulo">
+                <h3 class="titulo">Bodegas:</h3>
+            </div>
             <div class="bodegas">
                 <li class="bodega">
                     <div class="title">
