--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -63,3 +63,84 @@ ul.slider li:target {
     font-size: 20px;
     border-radius: 100%;
 }
+.recomendations-row{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    margin: 20px 50px;
+}
+
+/****************** Estilos de las cajas de productos *******************/
+.box-product {
+    box-shadow: none;
+    border-radius: 1em;
+    display: flex;
+    background-color: white;
+    margin: 10px
+  }
+  .box-product .div-producto:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    transition: all 300ms ease-in-out;
+  }
+  .box-details{
+    border-top: solid 1px lightgray;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
+    padding: 5px 15px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .etiqueta-link {
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    background-color: transparent;
+  }
+  .div-producto{
+    border: solid 1px lightgray;
+    max-width: 650px;
+    margin: 0 auto;
+    border-radius: 1em;
+  }
+  .contenedor-imagen-producto img{
+    display: flex;
+    justify-content: center;
+    height: 15em;
+    width: 13em;
+    border-radius: 20px;
+  }
+  .product-name{
+    margin-bottom: 3px;
+  }
+  .box-price {
+    width: 90%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .tachar-precio {
+    text-decoration: line-through 1px purple;
+    font-weight: 300;
+    color: #666;
+  }
+  .price{
+    color: black;
+    font-weight: 300;
+  }
+  .box-size-wine{
+    color: #666;
+    font-size: 15px;
+    padding-top: 4px;
+    
+  }
+  .box-discount{
+    color: #80083F;
+    font-weight: 300;
+  }
+  .box-product-name{
+    color: black;
+  }
+  
+  /******************** Fin caja producto *****************************/
