--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,7 +24,7 @@
             <a href="/products"><li>Productos</li></a>
             <a href="/bodegas"><li>Bodegas</li></a>
             <a href="/products/provincias"><li>Provincias</li></a>
-            <a href="/products/carrito"><li>Carrito</li></a>
+            <a href="/products/categorias"><li>Categorías</li></a>
             <% if(locals.isLogged.category_id == 1) { %>
             <a href="/products/crear"><li>Crear</li></a>
             <% } %>
