--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -114,6 +114,8 @@ ul.slider li:target {
   }
   .product-name{
     margin-bottom: 3px;
+    font-weight: 400;
+
   }
   .box-price {
     width: 90%;
