--- a/src/views/products/categorias.ejs
+++ b/src/views/products/categorias.ejs
@@ -10,7 +10,9 @@
 
     <main>
       <% if(cabernetFranc.length > 0) { %>
+        <div class="contenedor-titulo">
         <h3 class="recomendaciones">Cabernet Franc:</h3>
+      </div>
             <div class="recomendations-row">
                 <% cabernetFranc.forEach(function(item, index) { %>
                 <div class="box-product">
@@ -45,7 +47,9 @@
             </div>
     <%}%>
     <% if(cabernetSauvignon.length > 0) { %>
+      <div class="contenedor-titulo">
         <h3 class="recomendaciones">Cabernet Sauvignon:</h3>
+      </div>
             <div class="recomendations-row">
                 <% cabernetSauvignon.forEach(function(item, index) { %>
                   <div class="box-product">
@@ -80,7 +84,9 @@
             </div>
     <%}%>
     <% if(pinotNoir.length > 0) { %>
+      <div class="contenedor-titulo">
         <h3 class="recomendaciones">Pinot Noir:</h3>
+      </div>
             <div class="recomendations-row">
                 <% pinotNoir.forEach(function(item, index) { %>
                   <div class="box-product">
@@ -115,7 +121,9 @@
             </div>
     <%}%>
     <% if(chardonnay.length > 0) { %>
+      <div class="contenedor-titulo">
         <h3 class="recomendaciones">Chardonnay:</h3>
+      </div>
             <div class="recomendations-row">
                 <% chardonnay.forEach(function(item, index) { %>
                   <div class="box-product">
@@ -150,7 +158,9 @@
             </div>
     <%}%>
     <% if(malbec.length > 0) { %>
+      <div class="contenedor-titulo">
         <h3 class="recomendaciones">Malbec:</h3>
+        </div>
             <div class="recomendations-row">
                 <% malbec.forEach(function(item, index) { %>
                   <div class="box-product">
@@ -185,7 +195,9 @@
             </div>
     <%}%>
     <% if(sauvignonBlanc.length > 0) { %>
+      <div class="contenedor-titulo">
         <h3 class="recomendaciones">Sauvignon Blanc:</h3>
+        </div>
             <div class="recomendations-row">
                 <% sauvignonBlanc.forEach(function(item, index) { %>
                   <div class="box-product">
@@ -220,7 +232,9 @@
             </div>
     <%}%>
     <% if(merlot.length > 0) { %>
+      <div class="contenedor-titulo">
         <h3 class="recomendaciones">Merlot:</h3>
+      </div>
             <div class="recomendations-row">
                 <% merlot.forEach(function(item, index) { %>
                   <div class="box-product">
@@ -255,7 +269,9 @@
             </div>
     <%}%>
     <% if(syrah.length > 0) { %>
+      <div class="contenedor-titulo">
         <h3 class="recomendaciones">Syrah:</h3>
+        </div>
             <div class="recomendations-row">
                 <% syrah.forEach(function(item, index) { %>
                   <div class="box-product">
@@ -290,7 +306,9 @@
             </div>
     <%}%>
     <% if(blend.length > 0) { %>
+      <div class="contenedor-titulo">
         <h3 class="recomendaciones">Blend:</h3>
+      </div>
             <div class="recomendations-row">
                 <% blend.forEach(function(item, index) { %>
                   <div class="box-product">
