--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -5,6 +5,10 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    font-weight: 300
+}
+h3{
+    font-weight: 400
 }
 
 /*************** Footer ***************/
