--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -10,10 +10,10 @@
     <%- include("../partials/header.ejs") %>
 
     <main>
-      <div class="contenedor-main">
-        <div>
-          <h2>Formulario de creación de productos</h2>
-        </div>
+      <div class="contenedor-titulo">
+        <h3 class="title">Formulario de creación de productos:</h3>
+
+      </div>
 
         <div class="contenedor-form">
           <form id="form" action="/products" method="POST" enctype="multipart/form-data">
@@ -225,7 +225,6 @@
             </div>
           </form>
         </div>
-      </div>
     </main>
 
 
