--- a/public/css/editar-perfil.css
+++ b/public/css/editar-perfil.css
@@ -1,13 +1,35 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-}
 
-h1 {
-  color: #80083f;
+main{
+    padding: 20px 20px;
+  }
+  
+  .contenedor-titulo {
+  margin: 10px 40px;
+  }
+
+h3 {
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: flex-start;
+    font-size: 22px;
+    font-weight: 300;
+    padding: 3px 9px;
+    color: #666;
+    flex-direction: row;
+    border-bottom: 1px solid #80083F;
 }
+.contenedor-form {
+    padding: 20px 0;
+    font-weight: 300;
+    margin: 0px 40px;
+  }
+  .contenedor-inputs{
+    padding: 20px;
+    border: solid 1px #80083F;
+    border-radius: 8px;
+    width: 80%;
+    margin: auto;
+  }
 
 li {
     list-style-type: none;
@@ -29,34 +51,67 @@ li {
 form {
     padding: 20px;
 }
+.label-input {
+    height: 35px;
+    width: 90%;
+    border: solid 1px lightgray;
+  }
 
-input .edit-input {
-  width: 75%;
-  padding: 5px 5px;
-  border-radius: 6px;
-  border: solid 1px #b9b7b8;
-  border-radius: 12px;
+.edit-input {
+    height: 35px;
+    width: 90%;
+    border: solid 1px lightgray;
+    color:#666
 }
 .edit-button {
-  background-color: #80083f;
-  color: white;
+    color: white;
+  background-color: #80083F;
+  display: flex;
+  font-weight: bold;
+  height: 40px;
+  width: 40vw;
+  max-width: 175px;
+  min-width: 110px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  border:0px
 }
-label .edit-label {
-  position: absolute;
-  width: 75%;
-  left: 10px;
-  float: left;
+.edit-button:hover {
+    background-color: rgb(129, 22, 129);
+    color: white;
+  }
+input{
+    border-radius: 6px;
 }
+.edit-label {
+    color: #80083F;
+}
+.input-foto{
+    background-color: white;
+    color: #80083F
+  }
 .back {
     margin: 15px;
 }
 .back-button {
-    background-color: #80083f;
     color: white;
-    text-decoration: none;
-    padding: 5px 5px;
-    border-radius: 6px;
+    background-color: #80083F;
+    display: flex;
+    font-weight: bold;
+    height: 40px;
+    width: 40vw;
+    max-width: 175px;
+    min-width: 110px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border:0px
 }
+.back-button:hover {
+    background-color: rgb(129, 22, 129);
+    color: white;
+  }
 
 .is-valid {
     color: #198754;
